--- a/app/views/form.scala.html
+++ b/app/views/form.scala.html
@@ -1,5 +1,5 @@
 @helper.form(action = routes.User.formSubmit) {
-    <input type="text" name="username" /><br/>
+    <input type="text" name="name" /><br/>
     <input type="password" name="password" /><br/>
 
     <input type="submit" value="Login" />
