--- a/app/views/form.scala.html
+++ b/app/views/form.scala.html
@@ -1,4 +1,4 @@
-@helper.form(action = routes.User.formSubmit) {
+@helper.form(action = routes.User.formSubmit()) {
     <input type="text" name="name" /><br/>
     <input type="password" name="password" /><br/>
 
