--- a/app/views/form.scala.html
+++ b/app/views/form.scala.html
@@ -1,6 +1,6 @@
-@helper.form(action = routes.User.formSubmit()) {
+<form action = "/welcome/form" method = "POST" >
     <input type="text" name="name" /><br/>
     <input type="password" name="password" /><br/>
 
     <input type="submit" value="Login" />
-}
+</form>
