--- a/app/views/form.scala.html
+++ b/app/views/form.scala.html
@@ -1,5 +1,7 @@
 <form action="/welcome/form" method="POST" >
+    <label for="name">name: </label>
     <input type="text" name="name" /><br/>
+    <label for="password">password: </label>
     <input type="password" name="password" /><br/>
 
     <input type="submit" value="Login" />
