--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         @for(style <- styles){
-            <link rel="stylesheet" href="@routes.Assets.at(s"stylesheets/style.css")">
+            <link rel="stylesheet" href="@routes.Assets.at(f"stylesheets/$style%s.css")">
         }
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
