--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(message: String)
 
-@main("Welcome to Play", @Array("name", "id") , @Array("scr", "ipt", "qwerty") ) {
+@main("Welcome to Play", @{val style = Array("name", "id"); style} , @{val script = Array("scr", "ipt", "qwerty"); script} ) {
 
     <h1>Hi !!</h1>
 
