--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String, styles: Array[String] = Array(Nothing), scripts: Array[String] = Array(Nothing))(content: Html)
+@(title: String, styles: Array[String] = Array(), scripts: Array[String] = Array())(content: Html)
 
 <!DOCTYPE html>
 
