--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(message: String)
-
-@main("Welcome to Play", Array("name", "id"), Array("scr", "ipt", "qwerty")) {
+<!-- main(title, styles, scripts)(content) -->
+@main("Welcome to Play", List("name", "id"), List("scr", "ipt", "qwerty")) {
 
     <h1>Hi !!</h1>
 
