--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,6 +2,6 @@
 <!-- main(title, styles, scripts)(content) -->
 @main(title="Welcome to Play", styles=List("name", "id"), scripts=List("scr", "ipt", "qwerty")) {
 
-    <h1>Hi !!</h1>
+    <h1>@message</h1>
 
 }
