--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(message: String)
+@(message: String="")
 <!-- main(title, styles, scripts)(content) -->
 @main(title="Welcome to Play", styles=List("name", "id"), scripts=List("scr", "ipt", "qwerty")) {
 
