--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,5 +3,6 @@
 @main(title="Welcome to Play", styles=List("name", "id"), scripts=List("scr", "ipt", "qwerty")) {
 
     <h1>@message</h1>
+    <h2>Hello Play..!</h2>
 
 }
