--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String, styles: List[String] = List(), scripts: List[String] = List())(content: Html)
+@(title: String = "Untitled page", styles: List[String] = List(), scripts: List[String] = List())(content: Html)
 
 <!DOCTYPE html>
 
