--- a/app/views/task.scala.html
+++ b/app/views/task.scala.html
@@ -1,9 +1,9 @@
-@(tasks: List[Task], taskForm: Form[String])
+@(tasks: List[Task], taskForm: Form[String], error:String = "")
 
 @import helper._
 
 @main("Todo list") {
-    
+    @error
     <h1>@tasks.size task(s)</h1>
     
     <ul>
