--- a/app/views/task.scala.html
+++ b/app/views/task.scala.html
@@ -1,4 +1,4 @@
-@(tasks: List[Task], taskForm: Form[String], error:String = "")
+@(tasks: List[List[String]], taskForm: Form[String], error:String = "")
 
 @import helper._
 
