--- a/app/views/task.scala.html
+++ b/app/views/task.scala.html
@@ -1,4 +1,4 @@
-@(tasks: List[List[String]], taskForm: Form[String], error:String = "")
+@(tasks: List[Task], taskForm: Form[String], error:String = "")
 
 @import helper._
 
@@ -9,9 +9,9 @@
     <ul>
         @tasks.map { task =>
             <li>
-                @task(1)
+                @task.label
                 
-                @form(routes.Application.deleteTask(task(0).toInt)) {
+                @form(routes.Application.deleteTask(task.id)) {
                     <input type="submit" value="Delete">
                 }
             </li>
