--- a/app/views/find.scala.html
+++ b/app/views/find.scala.html
@@ -1,6 +1,6 @@
 @(task:Task)
 
 @main("Search"){
-    <h1>You have @task.size result</h1>
+    <h1>You have 1 result</h1>
     <h2>task id = @task.id, label = @task.label</h2>
 }
