--- a/app/views/user.scala.html
+++ b/app/views/user.scala.html
@@ -2,14 +2,21 @@
 
 @main("List of users"){
     <ul>
-    @for(user <- users){
-        <li>@user.email</li>
-    }
+        @for(user <- users){
+            <li>@user.email</li>
+        }
     </ul>
-    @helper.form(action = routes.Users.post()){
-        @helper.inputText(userForm("id"))
-        @helper.inputText(userForm("name"))
-        @helper.inputText(userForm("email"))
-        <input type="submit" />
-    }
+        @helper.form(action = routes.Users.post()){
+            @helper.inputText(userForm("id"))
+            @helper.inputText(userForm("name"))
+            @helper.inputText(userForm("email"))
+            <input type="submit" />
+        }
+    <ul>
+        @if(userForm.hasErrors){
+            @userForm.errors.foreach{ error =>
+                <li>@(error.key): @error.message</li>
+            }
+        }
+    </ul>
 }
